kubeflow/components/mlflow-integration/virtualservice.mlflow.yaml
# https://github.com/kubeflow/website/blob/master/content/en/docs/components/central-dash/customize.md

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mlflow
  namespace: mlflow
spec:
  gateways:
  ## the istio gateway which is serving kubeflow
  ## TEMPLATE: <KUBEFLOW_GATEWAY_NAMESPACE>/<KUBEFLOW_GATEWAY_NAME>
  - kubeflow/kubeflow-gateway
  hosts:
  - '*'
  http:
  - headers:
      request:
        add:
          x-forwarded-prefix: /mlflow
    match:
    - uri:
        prefix: /mlflow/
      # rewrite:
      #   uri: /
    route:
    - destination:
        host: mlflow.mlflow.svc.cluster.local
        port:
          number: 80
